[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomiewatch"
version = "0.1.0"
description = "Privacy-first motion surveillance that runs on your laptop. Detects motion, captures snapshots, streams live — all local, no cloud."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "xghostient" },
]
keywords = ["surveillance", "motion-detection", "security", "webcam", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Security",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "flask>=3.0",
]

[project.urls]
Homepage = "https://github.com/xghostient/roomiewatch"
Issues = "https://github.com/xghostient/roomiewatch/issues"

[project.scripts]
roomiewatch = "roomiewatch.core:main"

[tool.setuptools.packages.find]
include = ["roomiewatch*"]
